# semnav

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: vision.md
docs/design/: crate-structure.md  daemon-lifecycle.md  dynamic-graph.md  graph-model.md  indexing-and-cache.md  language-adapters.md  lsp-integration.md  lsp-lifecycle.md  mcp-tools.md  observability.md  resilience.md
migrations/: V0001__init.sql  V0002__callees_cache.sql
src/: lib.rs  main.rs
src/adapters/: custom.rs  go.rs  kind.rs  mod.rs  provision.rs  python.rs  rust.rs  typescript.rs
src/daemon/: client.rs  connect.rs  discovery.rs  lock.rs  mod.rs  protocol.rs  reconnect.rs  server.rs
src/graph/: db.rs  mod.rs  model.rs  schema.rs
src/indexer/: discovery.rs  fetch.rs  mod.rs  pipeline.rs  reconcile.rs  runner.rs  symbol.rs  watcher.rs
src/lsp/: client.rs  handshake.rs  mod.rs  proto.rs  server.rs  supervisor.rs  transport.rs
src/mcp/: dto.rs  mod.rs  proxy.rs  server.rs
src/query/: dto.rs  filter.rs  lsp_query.rs  mod.rs  ops.rs  pool.rs  resolver.rs
tests/: custom_adapter_e2e.rs
tests/fixtures/lsp-probe/: README.md
tests/fixtures/lsp-probe/captures/: go_definition_basic.json  go_document_symbol_receiver_method.json  go_implementation_interface_to_struct.json  go_outgoing_calls_to_interface_method.json  python_definition_basic.json  python_document_symbol_self_attribute.json  python_hover_method_self_notation.json  typescript_definition_locationlink.json  typescript_document_symbol_overloads.json  typescript_hover_type_alias_with_jsdoc.json  typescript_implementation_basic.json  typescript_outgoing_calls_to_interface_method.json
